--- a/stylesheets/pygment_trac.css
+++ b/stylesheets/pygment_trac.css
@@ -1,70 +1,430 @@
-.highlight .hll { background-color: #ffffcc }
-.highlight  { background: #f0f3f3; }
-.highlight .c { color: #0099FF; font-style: italic } /* Comment */
-.highlight .err { color: #AA0000; background-color: #FFAAAA } /* Error */
-.highlight .k { color: #006699; font-weight: bold } /* Keyword */
-.highlight .o { color: #555555 } /* Operator */
-.highlight .cm { color: #0099FF; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #009999 } /* Comment.Preproc */
-.highlight .c1 { color: #0099FF; font-style: italic } /* Comment.Single */
-.highlight .cs { color: #0099FF; font-weight: bold; font-style: italic } /* Comment.Special */
-.highlight .gd { background-color: #FFCCCC; border: 1px solid #CC0000 } /* Generic.Deleted */
-.highlight .ge { font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #FF0000 } /* Generic.Error */
-.highlight .gh { color: #003300; font-weight: bold } /* Generic.Heading */
-.highlight .gi { background-color: #CCFFCC; border: 1px solid #00CC00 } /* Generic.Inserted */
-.highlight .go { color: #AAAAAA } /* Generic.Output */
-.highlight .gp { color: #000099; font-weight: bold } /* Generic.Prompt */
-.highlight .gs { font-weight: bold } /* Generic.Strong */
-.highlight .gu { color: #003300; font-weight: bold } /* Generic.Subheading */
-.highlight .gt { color: #99CC66 } /* Generic.Traceback */
-.highlight .kc { color: #006699; font-weight: bold } /* Keyword.Constant */
-.highlight .kd { color: #006699; font-weight: bold } /* Keyword.Declaration */
-.highlight .kn { color: #006699; font-weight: bold } /* Keyword.Namespace */
-.highlight .kp { color: #006699 } /* Keyword.Pseudo */
-.highlight .kr { color: #006699; font-weight: bold } /* Keyword.Reserved */
-.highlight .kt { color: #007788; font-weight: bold } /* Keyword.Type */
-.highlight .m { color: #FF6600 } /* Literal.Number */
-.highlight .s { color: #CC3300 } /* Literal.String */
-.highlight .na { color: #330099 } /* Name.Attribute */
-.highlight .nb { color: #336666 } /* Name.Builtin */
-.highlight .nc { color: #00AA88; font-weight: bold } /* Name.Class */
-.highlight .no { color: #336600 } /* Name.Constant */
-.highlight .nd { color: #9999FF } /* Name.Decorator */
-.highlight .ni { color: #999999; font-weight: bold } /* Name.Entity */
-.highlight .ne { color: #CC0000; font-weight: bold } /* Name.Exception */
-.highlight .nf { color: #CC00FF } /* Name.Function */
-.highlight .nl { color: #9999FF } /* Name.Label */
-.highlight .nn { color: #00CCFF; font-weight: bold } /* Name.Namespace */
-.highlight .nt { color: #330099; font-weight: bold } /* Name.Tag */
-.highlight .nv { color: #003333 } /* Name.Variable */
-.highlight .ow { color: #000000; font-weight: bold } /* Operator.Word */
-.highlight .w { color: #bbbbbb } /* Text.Whitespace */
-.highlight .mf { color: #FF6600 } /* Literal.Number.Float */
-.highlight .mh { color: #FF6600 } /* Literal.Number.Hex */
-.highlight .mi { color: #FF6600 } /* Literal.Number.Integer */
-.highlight .mo { color: #FF6600 } /* Literal.Number.Oct */
-.highlight .sb { color: #CC3300 } /* Literal.String.Backtick */
-.highlight .sc { color: #CC3300 } /* Literal.String.Char */
-.highlight .sd { color: #CC3300; font-style: italic } /* Literal.String.Doc */
-.highlight .s2 { color: #CC3300 } /* Literal.String.Double */
-.highlight .se { color: #CC3300; font-weight: bold } /* Literal.String.Escape */
-.highlight .sh { color: #CC3300 } /* Literal.String.Heredoc */
-.highlight .si { color: #AA0000 } /* Literal.String.Interpol */
-.highlight .sx { color: #CC3300 } /* Literal.String.Other */
-.highlight .sr { color: #33AAAA } /* Literal.String.Regex */
-.highlight .s1 { color: #CC3300 } /* Literal.String.Single */
-.highlight .ss { color: #FFCC33 } /* Literal.String.Symbol */
-.highlight .bp { color: #336666 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #003333 } /* Name.Variable.Class */
-.highlight .vg { color: #003333 } /* Name.Variable.Global */
-.highlight .vi { color: #003333 } /* Name.Variable.Instance */
-.highlight .il { color: #FF6600 } /* Literal.Number.Integer.Long */
+/* line 1, ../sass/pygment_trac.scss */
+.highlight .hll {
+  background-color: #ffffcc;
+}
 
-.type-csharp .highlight .k { color: #0000FF }
-.type-csharp .highlight .kt { color: #0000FF }
-.type-csharp .highlight .nf { color: #000000; font-weight: normal }
-.type-csharp .highlight .nc { color: #2B91AF }
-.type-csharp .highlight .nn { color: #000000 }
-.type-csharp .highlight .s { color: #A31515 }
-.type-csharp .highlight .sc { color: #A31515 }
+/* line 2, ../sass/pygment_trac.scss */
+.highlight {
+  background: #f0f3f3;
+}
+
+/* line 3, ../sass/pygment_trac.scss */
+.highlight .c {
+  color: #0099FF;
+  font-style: italic;
+}
+
+/* Comment */
+/* line 4, ../sass/pygment_trac.scss */
+.highlight .err {
+  color: #AA0000;
+  background-color: #ffaaaa;
+}
+
+/* Error */
+/* line 5, ../sass/pygment_trac.scss */
+.highlight .k {
+  color: #006699;
+  font-weight: bold;
+}
+
+/* Keyword */
+/* line 6, ../sass/pygment_trac.scss */
+.highlight .o {
+  color: #555555;
+}
+
+/* Operator */
+/* line 7, ../sass/pygment_trac.scss */
+.highlight .cm {
+  color: #0099FF;
+  font-style: italic;
+}
+
+/* Comment.Multiline */
+/* line 8, ../sass/pygment_trac.scss */
+.highlight .cp {
+  color: #009999;
+}
+
+/* Comment.Preproc */
+/* line 9, ../sass/pygment_trac.scss */
+.highlight .c1 {
+  color: #0099FF;
+  font-style: italic;
+}
+
+/* Comment.Single */
+/* line 10, ../sass/pygment_trac.scss */
+.highlight .cs {
+  color: #0099FF;
+  font-weight: bold;
+  font-style: italic;
+}
+
+/* Comment.Special */
+/* line 11, ../sass/pygment_trac.scss */
+.highlight .gd {
+  background-color: #FFCCCC;
+  border: 1px solid #cc0000;
+}
+
+/* Generic.Deleted */
+/* line 12, ../sass/pygment_trac.scss */
+.highlight .ge {
+  font-style: italic;
+}
+
+/* Generic.Emph */
+/* line 13, ../sass/pygment_trac.scss */
+.highlight .gr {
+  color: red;
+}
+
+/* Generic.Error */
+/* line 14, ../sass/pygment_trac.scss */
+.highlight .gh {
+  color: #003300;
+  font-weight: bold;
+}
+
+/* Generic.Heading */
+/* line 15, ../sass/pygment_trac.scss */
+.highlight .gi {
+  background-color: #CCFFCC;
+  border: 1px solid #00cc00;
+}
+
+/* Generic.Inserted */
+/* line 16, ../sass/pygment_trac.scss */
+.highlight .go {
+  color: #aaaaaa;
+}
+
+/* Generic.Output */
+/* line 17, ../sass/pygment_trac.scss */
+.highlight .gp {
+  color: #000099;
+  font-weight: bold;
+}
+
+/* Generic.Prompt */
+/* line 18, ../sass/pygment_trac.scss */
+.highlight .gs {
+  font-weight: bold;
+}
+
+/* Generic.Strong */
+/* line 19, ../sass/pygment_trac.scss */
+.highlight .gu {
+  color: #003300;
+  font-weight: bold;
+}
+
+/* Generic.Subheading */
+/* line 20, ../sass/pygment_trac.scss */
+.highlight .gt {
+  color: #99cc66;
+}
+
+/* Generic.Traceback */
+/* line 21, ../sass/pygment_trac.scss */
+.highlight .kc {
+  color: #006699;
+  font-weight: bold;
+}
+
+/* Keyword.Constant */
+/* line 22, ../sass/pygment_trac.scss */
+.highlight .kd {
+  color: #006699;
+  font-weight: bold;
+}
+
+/* Keyword.Declaration */
+/* line 23, ../sass/pygment_trac.scss */
+.highlight .kn {
+  color: #006699;
+  font-weight: bold;
+}
+
+/* Keyword.Namespace */
+/* line 24, ../sass/pygment_trac.scss */
+.highlight .kp {
+  color: #006699;
+}
+
+/* Keyword.Pseudo */
+/* line 25, ../sass/pygment_trac.scss */
+.highlight .kr {
+  color: #006699;
+  font-weight: bold;
+}
+
+/* Keyword.Reserved */
+/* line 26, ../sass/pygment_trac.scss */
+.highlight .kt {
+  color: #007788;
+  font-weight: bold;
+}
+
+/* Keyword.Type */
+/* line 27, ../sass/pygment_trac.scss */
+.highlight .m {
+  color: #ff6600;
+}
+
+/* Literal.Number */
+/* line 28, ../sass/pygment_trac.scss */
+.highlight .s {
+  color: #cc3300;
+}
+
+/* Literal.String */
+/* line 29, ../sass/pygment_trac.scss */
+.highlight .na {
+  color: #330099;
+}
+
+/* Name.Attribute */
+/* line 30, ../sass/pygment_trac.scss */
+.highlight .nb {
+  color: #336666;
+}
+
+/* Name.Builtin */
+/* line 31, ../sass/pygment_trac.scss */
+.highlight .nc {
+  color: #00AA88;
+  font-weight: bold;
+}
+
+/* Name.Class */
+/* line 32, ../sass/pygment_trac.scss */
+.highlight .no {
+  color: #336600;
+}
+
+/* Name.Constant */
+/* line 33, ../sass/pygment_trac.scss */
+.highlight .nd {
+  color: #9999ff;
+}
+
+/* Name.Decorator */
+/* line 34, ../sass/pygment_trac.scss */
+.highlight .ni {
+  color: #999999;
+  font-weight: bold;
+}
+
+/* Name.Entity */
+/* line 35, ../sass/pygment_trac.scss */
+.highlight .ne {
+  color: #CC0000;
+  font-weight: bold;
+}
+
+/* Name.Exception */
+/* line 36, ../sass/pygment_trac.scss */
+.highlight .nf {
+  color: #cc00ff;
+}
+
+/* Name.Function */
+/* line 37, ../sass/pygment_trac.scss */
+.highlight .nl {
+  color: #9999ff;
+}
+
+/* Name.Label */
+/* line 38, ../sass/pygment_trac.scss */
+.highlight .nn {
+  color: #00CCFF;
+  font-weight: bold;
+}
+
+/* Name.Namespace */
+/* line 39, ../sass/pygment_trac.scss */
+.highlight .nt {
+  color: #330099;
+  font-weight: bold;
+}
+
+/* Name.Tag */
+/* line 40, ../sass/pygment_trac.scss */
+.highlight .nv {
+  color: #003333;
+}
+
+/* Name.Variable */
+/* line 41, ../sass/pygment_trac.scss */
+.highlight .ow {
+  color: #000000;
+  font-weight: bold;
+}
+
+/* Operator.Word */
+/* line 42, ../sass/pygment_trac.scss */
+.highlight .w {
+  color: #bbbbbb;
+}
+
+/* Text.Whitespace */
+/* line 43, ../sass/pygment_trac.scss */
+.highlight .mf {
+  color: #ff6600;
+}
+
+/* Literal.Number.Float */
+/* line 44, ../sass/pygment_trac.scss */
+.highlight .mh {
+  color: #ff6600;
+}
+
+/* Literal.Number.Hex */
+/* line 45, ../sass/pygment_trac.scss */
+.highlight .mi {
+  color: #ff6600;
+}
+
+/* Literal.Number.Integer */
+/* line 46, ../sass/pygment_trac.scss */
+.highlight .mo {
+  color: #ff6600;
+}
+
+/* Literal.Number.Oct */
+/* line 47, ../sass/pygment_trac.scss */
+.highlight .sb {
+  color: #cc3300;
+}
+
+/* Literal.String.Backtick */
+/* line 48, ../sass/pygment_trac.scss */
+.highlight .sc {
+  color: #cc3300;
+}
+
+/* Literal.String.Char */
+/* line 49, ../sass/pygment_trac.scss */
+.highlight .sd {
+  color: #CC3300;
+  font-style: italic;
+}
+
+/* Literal.String.Doc */
+/* line 50, ../sass/pygment_trac.scss */
+.highlight .s2 {
+  color: #cc3300;
+}
+
+/* Literal.String.Double */
+/* line 51, ../sass/pygment_trac.scss */
+.highlight .se {
+  color: #CC3300;
+  font-weight: bold;
+}
+
+/* Literal.String.Escape */
+/* line 52, ../sass/pygment_trac.scss */
+.highlight .sh {
+  color: #cc3300;
+}
+
+/* Literal.String.Heredoc */
+/* line 53, ../sass/pygment_trac.scss */
+.highlight .si {
+  color: #aa0000;
+}
+
+/* Literal.String.Interpol */
+/* line 54, ../sass/pygment_trac.scss */
+.highlight .sx {
+  color: #cc3300;
+}
+
+/* Literal.String.Other */
+/* line 55, ../sass/pygment_trac.scss */
+.highlight .sr {
+  color: #33aaaa;
+}
+
+/* Literal.String.Regex */
+/* line 56, ../sass/pygment_trac.scss */
+.highlight .s1 {
+  color: #cc3300;
+}
+
+/* Literal.String.Single */
+/* line 57, ../sass/pygment_trac.scss */
+.highlight .ss {
+  color: #ffcc33;
+}
+
+/* Literal.String.Symbol */
+/* line 58, ../sass/pygment_trac.scss */
+.highlight .bp {
+  color: #336666;
+}
+
+/* Name.Builtin.Pseudo */
+/* line 59, ../sass/pygment_trac.scss */
+.highlight .vc {
+  color: #003333;
+}
+
+/* Name.Variable.Class */
+/* line 60, ../sass/pygment_trac.scss */
+.highlight .vg {
+  color: #003333;
+}
+
+/* Name.Variable.Global */
+/* line 61, ../sass/pygment_trac.scss */
+.highlight .vi {
+  color: #003333;
+}
+
+/* Name.Variable.Instance */
+/* line 62, ../sass/pygment_trac.scss */
+.highlight .il {
+  color: #ff6600;
+}
+
+/* Literal.Number.Integer.Long */
+/* line 64, ../sass/pygment_trac.scss */
+.type-csharp .highlight .k {
+  color: blue;
+}
+
+/* line 65, ../sass/pygment_trac.scss */
+.type-csharp .highlight .kt {
+  color: blue;
+}
+
+/* line 66, ../sass/pygment_trac.scss */
+.type-csharp .highlight .nf {
+  color: #000000;
+  font-weight: normal;
+}
+
+/* line 67, ../sass/pygment_trac.scss */
+.type-csharp .highlight .nc {
+  color: #2b91af;
+}
+
+/* line 68, ../sass/pygment_trac.scss */
+.type-csharp .highlight .nn {
+  color: black;
+}
+
+/* line 69, ../sass/pygment_trac.scss */
+.type-csharp .highlight .s {
+  color: #a31515;
+}
+
+/* line 70, ../sass/pygment_trac.scss */
+.type-csharp .highlight .sc {
+  color: #a31515;
+}
