--- a/sass/stylesheet.scss
+++ b/sass/stylesheet.scss
@@ -118,11 +118,11 @@ a {
   -ms-transition: text-shadow 0.5s ease;
 }
 
-a:hover, a:focus {text-decoration: underline;}
+a:hover, a:focus {text-decoration: none;}
 
 footer a {
   color: #F2F2F2;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 em {
