Using jquery.mobile or not?

--- a/sass/stylesheet.scss
+++ b/sass/stylesheet.scss
@@ -254,6 +254,12 @@ form {
   padding: 20px;
 }
 
+adress {
+	background-color: rgba(255,0,0,0.5);
+	color: yellow;
+	text-align: centerl
+	}
+
 /*******************************************************************************
 Full-Width Styles
 *******************************************************************************/
