--- a/sass/footable.standalone.scss
+++ b/sass/footable.standalone.scss
@@ -8,6 +8,7 @@
   -webkit-border-radius: 6px;
   border-radius: 6px;
   font-family: 'trebuchet MS', 'Lucida sans', Arial;
+  font-size: 1em;
   @extend .c5;
 }
 .footable > thead > tr:first-child > th.footable-first-column,
