--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -1,4 +1,4 @@
-    @import 'normalize';
+    @import 'normalize/normalize';
     
     /**
     * Eric Meyer's Reset CSS v2.0 (http://meyerweb.com/eric/tools/css/reset/)
