--- a/stylesheets/intro.css
+++ b/stylesheets/intro.css
@@ -63,52 +63,66 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-/* line 14, ../sass/intro.scss */
+/* line 28, ../sass/intro.scss */
 html {
-  color: lightblue;
-  background-color: navy;
-}
-
-/* line 15, ../sass/intro.scss */
-body {
-  color: mediumblue;
-  background-color: blue;
-}
-
-/* line 16, ../sass/intro.scss */
-div {
   color: black;
   background-color: white;
-  clear: both;
 }
 
-/* line 24, ../sass/intro.scss */
-#imageInhoud {
-  width: 50%;
-  height: auto;
-  background-color: red;
-  float: right;
+/* line 29, ../sass/intro.scss */
+body {
+  color: black;
+  background-color: white;
 }
 
 /* line 30, ../sass/intro.scss */
-#imageInhoud > div {
-  background: url(http://localhost/appFlat/images/259x149_rijn.jpeg);
+div {
+  color: black;
+  background-color: white;
 }
 
-/* line 34, ../sass/intro.scss */
+/* line 33, ../sass/intro.scss */
+#footer {
+  color: black;
+  background-color: white;
+  text-align: center;
+}
+
+/* line 38, ../sass/intro.scss */
+.cols2-ri, #imageInhoud, #menuInhoud {
+  width: 50%;
+  height: 75%;
+  min-height: 320px;
+  float: right;
+}
+
+/* line 49, ../sass/intro.scss */
+#imageInhoud > div {
+  color: black;
+  background-image: url("http://localhost/appFlat/images/1600x1200_lammeren.jpg");
+  background-color: white;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-origin: border-box;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  min-height: 320px;
+}
+
+/* line 54, ../sass/intro.scss */
 .inhoud, #menuInhoud h1, #menuInhoud h2, #menuInhoud h3, #menuInhoud h4 {
   float: right;
   font-weight: bold;
 }
 
-/* line 40, ../sass/intro.scss */
+/* line 60, ../sass/intro.scss */
 #menuInhoud {
   color: black;
   background-color: white;
-  width: 100%;
   float: right;
 }
-/* line 43, ../sass/intro.scss */
+/* line 63, ../sass/intro.scss */
 #menuInhoud h1 {
   color: orange;
   background-color: white;
@@ -116,21 +130,21 @@ div {
   margin: 5px 0px 5px 0px;
   clear: both;
 }
-/* line 49, ../sass/intro.scss */
+/* line 69, ../sass/intro.scss */
 #menuInhoud h2 {
   color: black;
   background-color: white;
   font-size: x-large;
   clear: both;
 }
-/* line 54, ../sass/intro.scss */
+/* line 74, ../sass/intro.scss */
 #menuInhoud h3 {
   color: red;
   background-color: white;
   font-size: large;
   margin: 4px;
 }
-/* line 59, ../sass/intro.scss */
+/* line 79, ../sass/intro.scss */
 #menuInhoud h4 {
   color: black;
   background-color: white;
@@ -138,31 +152,36 @@ div {
   font-weight: normal;
   margin: 0px 0px 5px 0px;
 }
-/* line 65, ../sass/intro.scss */
+/* line 85, ../sass/intro.scss */
 #menuInhoud h5 {
   color: blue;
 }
-/* line 66, ../sass/intro.scss */
+/* line 86, ../sass/intro.scss */
 #menuInhoud h6 {
   color: orange;
 }
 
-/* line 82, ../sass/intro.scss */
+/* line 102, ../sass/intro.scss */
 #slideshow {
+  clear: both;
   height: 100px;
   position: relative;
   overflow: hidden;
 }
 
-/* line 88, ../sass/intro.scss */
+/* line 109, ../sass/intro.scss */
 #slideshow > div {
   height: 100%;
   width: 8128px;
-  background: url(http://localhost/appFlat/images/8128x608.jpg);
+  color: red;
+  background-image: url("http://localhost/appFlat/images/8128x608.jpg");
+  background-color: yellow;
+  background-repeat: repeat;
+  background-size: contain;
+  background-origin: border-box;
   -webkit-background-size: contain;
   -moz-background-size: contain;
   -o-background-size: contain;
-  background-size: contain;
   position: absolute;
   top: 0;
   left: 0;
@@ -170,33 +189,33 @@ div {
   -o-transition: opacity 0.5s ease-out;
   -webkit-transition: opacity 0.5s ease-out;
   -ms-transition: opacity 0.5s ease-out;
-  -webkit-animation: moveSlideshow 60s linear infinite;
-  -moz-animation: moveSlideshow 60s linear infinite;
+  -webkit-animation: moveSlideshow 60s linear 2s infinite alternate;
+  -moz-animation: moveSlideshow 60s linear 2s infinite alternate;
 }
 
 @-webkit-keyframes moveSlideshow {
-  /* line 104, ../sass/intro.scss */
+  /* line 121, ../sass/intro.scss */
   0% {
     left: 0;
   }
 
-  /* line 105, ../sass/intro.scss */
+  /* line 122, ../sass/intro.scss */
   100% {
     left: -500px;
   }
 }
 @-moz-keyframes moveSlideshow {
-  /* line 108, ../sass/intro.scss */
+  /* line 125, ../sass/intro.scss */
   0% {
     left: 0;
   }
 
-  /* line 109, ../sass/intro.scss */
+  /* line 126, ../sass/intro.scss */
   100% {
     left: -500px;
   }
 }
-/* line 112, ../sass/intro.scss */
+/* line 129, ../sass/intro.scss */
 img {
   width: 500px;
   height: 500px;
